// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Followers renders correctly 1`] = `
<h1>
  Followers Not Implemented
</h1>
`;

exports[`Following renders correctly 1`] = `
<h1>
  Following Not Implemented
</h1>
`;

exports[`Profile renders correctly 1`] = `
<RCTScrollView
  onLayout={[Function]}
>
  <View>
    <View>
      <Image
        source=""
        style={
          Object {
            "height": 750,
            "width": 750,
          }
        }
      />
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 30,
              "padding": 10,
            }
          }
        >
          Name
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        
      </Text>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 30,
              "padding": 10,
            }
          }
        >
          Username
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        
      </Text>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 30,
              "padding": 10,
            }
          }
        >
          Bio
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        
      </Text>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 30,
              "padding": 10,
            }
          }
        >
          Email
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        
      </Text>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 30,
              "padding": 10,
            }
          }
        >
          Website
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={null}
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 30,
                "padding": 10,
              }
            }
          >
            Repositories
          </Text>
        </View>
        <Text
          style={
            Object {
              "fontSize": 20,
              "padding": 10,
            }
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={null}
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 30,
                "padding": 10,
              }
            }
          >
            Followers
          </Text>
        </View>
        <Text
          style={
            Object {
              "fontSize": 20,
              "padding": 10,
            }
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={null}
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 30,
                "padding": 10,
              }
            }
          >
            Following
          </Text>
        </View>
        <Text
          style={
            Object {
              "fontSize": 20,
              "padding": 10,
            }
          }
        >
          
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 30,
              "padding": 10,
            }
          }
        >
          Profile creation date
        </Text>
      </View>
      <Text
        style={
          Object {
            "fontSize": 20,
            "padding": 10,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Repositories renders correctly 1`] = `
<RCTScrollView>
  <View />
</RCTScrollView>
`;
